[package]
name = "tsar"
version = "0.2.2"
authors = ["adam-mcdaniel <adam.mcdaniel17@gmail.com>"]
edition = "2018"
description = "Tsar programming language"
license = "MIT"
documentation = "https://docs.rs/tsar"
homepage = "https://github.com/adam-mcdaniel/tsar"
repository = "https://github.com/adam-mcdaniel/tsar"

[[bin]]
name = "tsar"
path = "src/bin.rs"


[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.17.2"

[dependencies]
lalrpop-util = "0.17"
regex = "1.3"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
git2 = "0.10"
url = "2.1"
clap = "2.33"
xasm = "0.5.2"
xassembler = "0.5.1"
fs_extra = "1.1"
