[package]
name = "tsar"
version = "0.2.13"
authors = ["Adam McDaniel <adam.mcdaniel17@gmail.com>"]
edition = "2018"
description = "Tsar programming language"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/tsar"
homepage = "https://github.com/adam-mcdaniel/tsar"
repository = "https://github.com/adam-mcdaniel/tsar"

[[bin]]
name = "tsar"
path = "src/bin.rs"

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
lalrpop-util = "0.17"
regex = "1.3"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
git2 = "0.10"
url = "2.1"
clap = "2.33"
xasm = "0.5"
xassembler = "0.5"
crossterm = "0.11"
fs_extra = "1.1"
remove_dir_all = "0.5.2"